2000-02-25 Mark Elbrecht <snowball3@bigfoot.com>

	* i386/djgpp.h (CPP_PREDEFINES): Remove Unix defines.

2000-02-25  John Wehle  (john@feith.com)

	* rtlanal.c (find_last_value): Allow NULL_RTX for valid_to.

2000-02-25  Anthony Green  <green@cygnus.com>

	* toplev.c (rest_of_compilation): Rebuild jump labels if
	combine_instructions has created a new direct jump.
	* combine.c (try_combine): Add new_direct_jump_p argument.  Set it
	when appropriate.
	(combine_instructions): Call try_combine with new argument.
	Return non-null value when new direct jump instruction is created.
	* rtl.h: combine_instructions returns an int.

Fri Feb 25 19:49:08 2000  Jeffrey A Law  (law@cygnus.com)

	* cse.c (cse_insn): Replace the PATTERN of the insn with an new
	jump when changing a computed jump into a jump to a known
	target.

Fri Feb 25 19:22:44 2000  Graham Stott <grahams@rcp.co.uk>

	* resource.c (mark_referenced_resources): Changed use SET_DEST (...)
	to XEXP (..., 0) on RTL nodes which are not SET or CLOBBER.

	* i386.md (define_expand "clrstrsi"): Fix typo.

Fri Feb 25 18:49:39 2000  "K. Richard Pixley" <rich@microunity.com>

	* rtl.texi: Fix typo.

Fri Feb 25 20:02:35 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* sh.c (calc_live_regs): Multiply value assigned to *COUNT_PTR by
	UNITS_PER_WORD.  Change caller initial_elimination_offset.
	(rounded_frame_size): Take into account that argument pushed has
	changed.  Fix TARGET_ALIGN_DOUBLE problem.

2000-02-25  Geoff Keating  <geoffk@cygnus.com>

	* haifa-sched.c (schedule_block): Explain the real reason
	we delete REG_SAVE_NOTEs on the first insn of a block.
	Don't delete REG_SAVE_NOTES for NOTE_INSN_SETJMP.

2000-02-24  Mark Mitchell  <mark@codesourcery.com>

	* input.h (push_srcloc): New function.
	(pop_srcloc): Likewise.
	* toplev.c (push_srcloc): Define it.
	(pop_srcloc): Likewise.

2000-02-24  Richard Henderson  <rth@cygnus.com>

	* flow.c (life_analysis): When collecting reg info, clear
	regs_ever_live.
